--- a/apps/docs/pages/_app.mdx
+++ b/apps/docs/pages/_app.mdx
@@ -1,6 +1,26 @@
 import React from "react";
 import "ui/styles/globals.css";
+import Script from "next/script";
 
 export default function App({ Component, pageProps }) {
-  return <Component {...pageProps} />;
+  return <>
+
+    <Component {...pageProps} />;
+
+    <Script
+      strategy="lazyOnload"
+      src="https://www.googletagmanager.com/gtag/js?id=G-QN2GLVBZL6"
+    />
+
+    <Script strategy="lazyOnload">
+      {`
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-QN2GLVBZL6');
+      `}
+    </Script>
+
+  </>
 }
